--- a/Guan_Ziyuan_Assignment5/Makefile
+++ b/Guan_Ziyuan_Assignment5/Makefile
@@ -1,5 +1,3 @@
-#Assignment 5 Makefile
-#@Ziyuan Guan 94722121
 KDIR	:= /usr/src/linux-headers-$(shell uname -r)
 obj-m := asp_mycdev.o
 
@@ -10,5 +8,5 @@ all:
 #	gcc -Wall -Werror -02 -o ioctl_test ioctl_test.c
 
 clean:
-	$(MAKE) -C $(KDIR) M=$(shell pwd) cleans
+	$(MAKE) -C $(KDIR) M=$(shell pwd) clean
 	rm -f *.o.cmd *.symvers *.order *.gch rw_test lseek_test ioctl_test
